    limit problem should not happen
  * Acknowledge NMU to fix FreeBSD and Hurd, thanks to Samuel
    Thibault <sthibault@debian.org>
  * Acknowledge NMU to change deb compression to xz, thanks to
    Ansgar Burchardt <ansgar@debian.org>
  * Acknowledge NMU to use smaller debug format for ia64 as well,
    thanks to Ansgar Burchardt <ansgar@debian.org>
  * debian/*.symbols:
  - updated

 -- Gustavo Noronha Silva <kov@debian.org>  Tue, 27 Nov 2012 14:29:13 -0200

webkit (1.9.2-1) experimental; urgency=low

  * New development release
  * debian/patches/10_kfreebsd_support.patch:
  - removed; applied upstream
  * debian/rules:
  - disable AR_FLAGS space optimization for now, since linking two libtool
    convenience libraries seems to break that
  * debian/*.symbols:
  - updated with symbols of the new version

 -- Gustavo Noronha Silva <kov@debian.org>  Tue, 08 May 2012 12:01:33 -0300

webkit (1.8.1-3.2) unstable; urgency=low

  * Non-maintainer upload.
  * debian/rules: use xz compression for binary packages. (Closes: #684139)

 -- Ansgar Burchardt <ansgar@debian.org>  Sat, 08 Sep 2012 18:40:04 +0200

webkit (1.8.1-3.1) unstable; urgency=low

  * Non-maintainer upload.
  * Fix debian/patches/10_kfreebsd_support.patch
  debian/patches/11_hurd_support.patch patches for kfreebsd and hurd build
  (Closes: #669059).

 -- Samuel Thibault <sthibault@debian.org>  Fri, 25 May 2012 11:00:30 +0200

webkit (1.8.1-3) unstable; urgency=low

  [ Samuel Thibault ]
  * debian/rules:
  - Disable debug symbols also for hurd-i386 (Closes: #664810)
  * debian/patches/11_hurd_support.patch:
  - Add Hurd-specific code path before the catch-all UNIX code path for
    getting the executable path (Closes: 669059)

 -- Gustavo Noronha Silva <kov@debian.org>  Wed, 23 May 2012 22:54:54 -0300

webkit (1.8.1-2) unstable; urgency=low

  [ Michael Biebl ]
  * debian/rules:
  - Use set -e in for loops to fail early
  - Standardize on $(shell ) for shell invocation and only add