@@ -326,3 +326,76 @@ Description: GObject introspection data for the WebKit library
  .
  It can be used by packages using the GIRepository format to generate
  dynamic bindings.
+
+Package: libwebkit2gtk-3.0-0
+Section: libs
+Architecture: any
+Depends: libjavascriptcoregtk-3.0-0 (= ${binary:Version}),
+         ${shlibs:Depends},
+         libwebkitgtk-3.0-common (>= ${source:Upstream-Version}),
+         ${misc:Depends}
+Recommends: gstreamer0.10-plugins-base,
+            gstreamer0.10-plugins-good,
+            gstreamer0.10-plugins-bad,
+            gstreamer0.10-ffmpeg
+Description: Web content engine library for GTK+
+ WebKit is a web content engine, derived from KHTML and KJS from KDE, and
+ used primarily in Apple's Safari browser.  It is made to be embedded in
+ other applications, such as mail readers, or web browsers.
+ .
+ It is able to display content such as HTML, SVG, XML, and others. It also
+ supports DOM, XMLHttpRequest, XSLT, CSS, Javascript/ECMAscript and more.
+ .
+ This is the library for embedding in GTK+ applications.
+
+Package: libwebkit2gtk-3.0-dev
+Section: libdevel
+Priority: extra
+Architecture: any
+Depends: libwebkit2gtk-3.0-0 (= ${binary:Version}),
+         gir1.2-webkit2-3.0 (= ${binary:Version}),
+         libgtk-3-dev,
+         libsoup2.4-dev (>= 2.40),
+         libjavascriptcoregtk-3.0-dev (= ${binary:Version}),
+         ${misc:Depends}
+Description: Web content engine library for GTK+ - Development files
+ WebKit is a web content engine, derived from KHTML and KJS from KDE, and
+ used primarily in Apple's Safari browser.  It is made to be embedded in
+ other applications, such as mail readers, or web browsers.
+ .
+ It is able to display content such as HTML, SVG, XML, and others. It also
+ supports DOM, XMLHttpRequest, XSLT, CSS, Javascript/ECMAscript and more.
+ .
+ This package provides development files required to create GTK+ applications
+ embedding WebKit.
+
+Package: libwebkit2gtk-3.0-0-dbg
+Section: debug
+Priority: extra
+Architecture: any
+Depends: libwebkit2gtk-3.0-0 (= ${binary:Version}),
+         libjavascriptcoregtk-3.0-0-dbg (= ${binary:Version}),
+         ${misc:Depends}
+Description: Web content engine library for GTK+ - Debugging symbols
+ WebKit is a web content engine, derived from KHTML and KJS from KDE, and
+ used primarily in Apple's Safari browser.  It is made to be embedded in
+ other applications, such as mail readers, or web browsers.
+ .
+ It is able to display content such as HTML, SVG, XML, and others. It also
+ supports DOM, XMLHttpRequest, XSLT, CSS, Javascript/ECMAscript and more.
+ .
+ This package provides the debugging symbols for the Webkit library for GTK+.
+
+Package: gir1.2-webkit2-3.0
+Section: introspection
+Architecture: any
+Depends: gir1.2-javascriptcoregtk-3.0 (= ${binary:Version}),
+         ${gir:Depends},
+         ${misc:Depends}
+Conflicts: gobject-introspection-repository, gir1.0-webkit-3.0
+Description: GObject introspection data for the GTK+ port of the WebKit2 library
+ This package contains introspection data for WebKit, a web content
+ engine for GTK+.
+ .
+ It can be used by packages using the GIRepository format to generate
+ dynamic bindings.
