@@ -1,0 +1,1 @@
+usr/lib/girepository-1.0/WebKit2-3.0.typelib
