@@ -1,0 +1,2 @@
+usr/lib/libwebkit2gtk-3.0.so.*
+usr/lib/webkit2gtk-3.0-0/libexec/MiniBrowser
