@@ -1,0 +1,5 @@
+usr/lib/libwebkit2gtk-3.0.so
+usr/include/webkitgtk-3.0/webkit2
+usr/lib/pkgconfig/webkit2gtk-3.0.pc
+usr/share/doc/libwebkit2gtk-3.0-dev
+usr/share/gir-1.0/WebKit2-3.0.gir
