@@ -1,0 +1,1 @@
+usr/share/doc/libwebkit2gtk-3.0-dev/html usr/share/gtk-doc/html/webkit2gtk-3.0
